// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPanel renders without crashing when loginned 1`] = `
<div
  className="chat-login-panel-container"
>
  <Connect(LogoutForm)
    socket={lookup {}}
  />
</div>
`;

exports[`LoginPanel renders without crashing when not loginned 1`] = `
<div
  className="chat-login-panel-container"
>
  <Connect(LoginForm)
    socket={lookup {}}
  />
</div>
`;
